Fixed inhaler icon size, overflow issue in code chunks

--- a/docs/cayman.css
+++ b/docs/cayman.css
@@ -629,3 +629,9 @@ code-chunk pre {
     max-height: unset !important;
     max-width: none !important;
 }
+
+/* BookDown R Code Chunks (Built In) */
+
+.book .book-body .page-wrapper .page-inner section.normal pre.sourceCode {
+  overflow: auto !important;
+}
